<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/searchType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/person"
                android:textOn="@string/location" />

            <EditText
                android:id="@+id/tfSearch"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSearchEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="search"
            android:text="@string/search" />

        <Button
            android:id="@+id/btnBackFromSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:text="@string/back" />

        <ListView
            android:id="@+id/searchResults"
            android:layout_width="match_parent"
            android:layout_height="369dp"
            android:divider="@color/black"
            android:dividerHeight="1px" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>